--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "material-icons": "^1.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
+    "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
@@ -19,6 +20,7 @@
     "react-virtualized": "^9.22.3",
     "redux": "^4.1.1",
     "redux-saga": "^1.1.3",
+    "socket.io-client": "^4.1.3",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
