--- a/server/package.json
+++ b/server/package.json
@@ -23,9 +23,15 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.13.5",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "redis": "^3.1.2",
+    "socket.io": "^4.1.3"
   },
   "proxy": "http://localhost:3000"
 }
