--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@syncfusion/ej2-react-calendars": "^19.2.55",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -10,15 +11,19 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "draft-js": "^0.11.7",
+    "lorem-ipsum": "^2.0.3",
     "material-icons": "^1.1.1",
+    "mdbreact": "^5.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
+    "react-loading-skeleton": "^2.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-time-picker": "^4.4.1",
+    "react-toastify": "^8.0.2",
     "react-virtualized": "^9.22.3",
     "redux": "^4.1.1",
     "redux-saga": "^1.1.3",
