--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "mdbreact": "^5.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
     "react-loading-skeleton": "^2.2.0",
