--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
-    "draft-js": "^0.11.7",
+    "firebase": "^9.0.2",
     "lorem-ipsum": "^2.0.3",
     "material-icons": "^1.1.1",
     "mdbreact": "^5.1.0",
@@ -19,6 +19,7 @@
     "react-copy-to-clipboard": "^5.0.4",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.2",
+    "react-images-uploading": "^3.1.3",
     "react-loading-skeleton": "^2.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
@@ -28,9 +29,10 @@
     "react-virtualized": "^9.22.3",
     "redux": "^4.1.1",
     "redux-saga": "^1.1.3",
-    "socket.io-client": "^4.1.3",
+    "socket.io-client": "^4.2.0",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "webpack": "^4.44.2"
   },
   "scripts": {
     "start": "react-scripts start",
