--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.28.2",
+    "canvas": "^2.8.0",
     "cookie": "^0.4.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -25,13 +26,19 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
+    "mammoth": "^1.4.18",
     "moment": "^2.29.1",
-    "mongoose": "^5.13.5",
+    "mongoose": "^6.0.7",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.12",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "react-quill": "^1.3.5",
     "redis": "^3.1.2",
-    "socket.io": "^4.1.3"
+    "socket.io": "^4.1.3",
+    "wmf": "^1.0.2",
+    "wmf2png": "^1.0.0"
   },
   "proxy": "http://localhost:3000"
 }
